Fixed cite jumping up/down on svgTxt resize

--- a/scss/partials/_svgtext.scss
+++ b/scss/partials/_svgtext.scss
@@ -1,7 +1,12 @@
 $text-size: 2.7rem;
-$author-size: 1.4em;
+$author-size: 1.8em;
 
 .quote {
+	svg {
+		overflow: visible;
+		transition: 2s height;
+	}
+
 	svg.text {
 		width: 100%;
 		height: 1px;
