--- a/scss/style.scss
+++ b/scss/style.scss
@@ -30,7 +30,7 @@ body {
 }
 
 .quote-wrapper {
-	min-height: 450px;
+	min-height: 300px;
 	width: 650px;
 	padding: 10px 20px 20px;
 	margin: 10% auto 50px;
